Cleaned notebook with explanations in markdown cells

--- a/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
+++ b/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
@@ -7,7 +7,8 @@
     "# Kaggle eCommerce Behavior Analysis\n",
     "This Notebook briefly analyzes the [Kaggle eCommerce Behavior dataset](https://www.kaggle.com/datasets/mkechinov/ecommerce-behavior-data-from-multi-category-store)\n",
     "\n",
-    "## Data set download\n",
+    "## Data Gathering\n",
+    "### Data set download using Kaggle Python API\n",
     "The first part of this notebook downloads the data set using the Kaggle python API.\n",
     "\n",
     "The files are downloaded only if there are not already in the local folder or if they are not up to date anymore."
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,10 +40,11 @@
     "\n",
     "kaggle.api.authenticate()\n",
     "\n",
-    "dataset_folder = \"dataset\"\n",
     "dataset_author = \"mkechinov\"\n",
     "dataset_name = \"ecommerce-behavior-data-from-multi-category-store\"\n",
     "dataset_full_name = f\"{dataset_author}/{dataset_name}\"\n",
+    "\n",
+    "dataset_folder = \"dataset\"\n",
     "os.makedirs(dataset_folder, exist_ok=True)\n",
     "\n",
     "print(f\"Listing local csv files in ./{dataset_folder}.\")\n",
@@ -68,15 +70,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Pyspark Init and data frames creation\n",
+    "Once the csv files associated with the Kaggle data set are downloaded, we can read them inside a Spark Session."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/08/13 17:24:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/08/13 17:24:23 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import pyspark\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, count, isnan, percentile, when\n",
     "from pyspark.sql.types import DateType\n",
-    "from pyspark.sql.functions import count, isnan, percentile, when\n",
     "\n",
     "# Create SparkSession \n",
     "spark = SparkSession.builder \\\n",
@@ -87,16 +108,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 114:===================================================>   (40 + 3) / 43]\r"
+      "                                                                                \r"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Create RDD from 2019-Oct.csv\n",
+    "# TODO: Use list of files retrieved from Kaggle instead of hard coding file name\n",
+    "df_sept = spark.read.csv(f\"{dataset_folder}/2019-Oct.csv\",header=True,escape=\"\\\"\")\n",
+    "df_sept_size = df_sept.count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Create RDD from 2019-Nov.csv\n",
+    "df_nov = spark.read.csv(f\"{dataset_folder}/2019-Nov.csv\",header=True,escape=\"\\\"\")\n",
+    "df_nov_size = df_nov.count()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Assessment and Cleaning\n",
+    "In this part, we'll perform parallel assessment and cleaning steps on the data sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -128,25 +189,15 @@
       "only showing top 20 rows\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
-    "# Create RDD from 2019-Oct.csv\n",
-    "df_sept = spark.read.csv(f\"{dataset_folder}/2019-Oct.csv\",header=True,escape=\"\\\"\")\n",
-    "df_sept_size = df_sept.count()\n",
     "df_sept.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -173,16 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 119:=================================================>     (61 + 7) / 68]\r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -214,30 +258,15 @@
       "only showing top 20 rows\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
-    "# Create RDD from 2019-Nov.csv\n",
-    "df_nov = spark.read.csv(f\"{dataset_folder}/2019-Nov.csv\",header=True,escape=\"\\\"\")\n",
-    "df_nov_size = df_nov.count()\n",
     "df_nov.show()"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,15 +292,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this first visual assessment, we can notice that the 2 data sets contain the same columns with the same data type schema. This means that we can merge the 2 data set using a union to concatenate all the records together while keeping the same set of column for the merged data set\n",
+    "\n",
+    "### Merging the data sets\n",
+    "We'll use the PySpark union function to merge our 2 original data sets.\n",
+    "\n",
+    "We'll then assert that the count of records of the merged data set is equal to the sum of records of the 2 original data sets."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "24/08/13 17:24:36 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n",
+      "[Stage 10:=================================================>    (102 + 9) / 111]\r"
      ]
     },
     {
@@ -290,6 +332,13 @@
       " |-- user_session: string (nullable = true)\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -304,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,8 +394,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the merged data set data type schema, we can notice that each field (column) is a string. There are at least 2 fields that could benefit from a data type cast:\n",
+    "* *price* should be a `double`\n",
+    "* *event_time* should be a `DateType`\n",
+    "\n",
+    "### Casting field to their appropriate data type\n",
+    "To cast the column into a new data type, we'll use the PySpark `withColumn` function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +478,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the visual display of the data set, we can notice that there are `NULL` inside the *brand* field. Since we don't have any simple way to impute the *brand* value, we'll drop all the records with `NULL` in *brand*.\n",
+    "\n",
+    "### Dropping `NULL` from *brand*\n",
+    "To remove records containing `NULL` in the *brand* column, we'll use the PySpark `na.drop` function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -462,14 +533,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 129:=================================================>   (104 + 7) / 111]\r"
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Assert that there is no NULL left in brand\n",
+    "assert df_cleaned.select(count(when(col(\"brand\").isNull(), \"brand\")).alias(\"brand\")).collect()[0][0] == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll now check if we have and undesired values in *price*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 19:==================================================>   (103 + 8) / 111]\r"
      ]
     },
     {
@@ -500,31 +596,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 134:>                                                        (0 + 1) / 1]\r"
+      "[Stage 24:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+--------+\n",
-      "|summary|   price|\n",
-      "+-------+--------+\n",
-      "|  count|94619500|\n",
-      "|    min|    0.77|\n",
-      "|     5%|   21.86|\n",
-      "|    25%|   72.85|\n",
-      "|    75%|  383.54|\n",
-      "|    95%| 1019.06|\n",
-      "|    max| 2574.07|\n",
-      "+-------+--------+\n",
+      "+-------+------------------+\n",
+      "|summary|             price|\n",
+      "+-------+------------------+\n",
+      "|  count|          94619500|\n",
+      "|    min|              0.77|\n",
+      "|     5%|             21.86|\n",
+      "|    25%|             72.85|\n",
+      "|    50%|            172.18|\n",
+      "|   mean|305.65739274913716|\n",
+      "|    75%|            383.54|\n",
+      "|    95%|           1019.06|\n",
+      "|    max|           2574.07|\n",
+      "+-------+------------------+\n",
       "\n"
      ]
     },
@@ -538,19 +636,34 @@
    ],
    "source": [
     "# Check price statistics\n",
-    "df_cleaned.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"75%\", \"95%\", \"max\").show()"
+    "df_price_summary = df_cleaned.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"50%\", \"mean\", \"75%\", \"95%\", \"max\")\n",
+    "df_price_summary.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can notice that a small portion of the prices (in the 95 percentile) have a very high value compared to the rest of the set. This skews the data set to the right.\n",
+    "\n",
+    "The value above the 95 percentile can be considered as outliers.\n",
+    "\n",
+    "One way of dealing with outliers is to remove them from the data set.\n",
+    "\n",
+    "### Removing 95 percentile outliers from *price*\n",
+    "We'll first extract the 95 percentile value from the price summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 135:=================================================>   (104 + 7) / 111]\r"
+      "[Stage 27:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -570,37 +683,49 @@
    ],
    "source": [
     "# Compute price 95% percentile\n",
-    "price_95_percentiles = df_cleaned.select(percentile(\"price\", 0.95).alias(\"percentile\")).collect()[0][0]\n",
-    "print(f\"Price 95 percentile = {price_95_percentiles}\")"
+    "# price_95_percentiles = df_cleaned.select(percentile(\"price\", 0.95).alias(\"percentile\")).collect()[0][0]\n",
+    "price_95_percentiles = df_price_summary.where(col(\"summary\") == \"95%\").head()[\"price\"]\n",
+    "# price_95_percentiles = df_price_summary.where(df_price_summary.summary == \"95%\")\n",
+    "print(f\"Price 95 percentile = {price_95_percentiles}\")\n",
+    "# df_price_summary.where(df_price_summary.summary == \"95%\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And then we can remove all the records where *price* is higher than the 95 percentile."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 105:>                                                        (0 + 1) / 1]\r"
+      "[Stage 36:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+--------+\n",
-      "|summary|   price|\n",
-      "+-------+--------+\n",
-      "|  count|89886155|\n",
-      "|    min|    0.77|\n",
-      "|     5%|   20.59|\n",
-      "|    25%|   69.46|\n",
-      "|    75%|   334.6|\n",
-      "|    95%|  793.92|\n",
-      "|    max| 1019.05|\n",
-      "+-------+--------+\n",
+      "+-------+-----------------+\n",
+      "|summary|            price|\n",
+      "+-------+-----------------+\n",
+      "|  count|         89886155|\n",
+      "|    min|             0.77|\n",
+      "|     5%|            20.59|\n",
+      "|    25%|            69.46|\n",
+      "|    50%|           160.36|\n",
+      "|   mean|244.4629314853627|\n",
+      "|    75%|            334.6|\n",
+      "|    95%|           793.92|\n",
+      "|    max|          1019.05|\n",
+      "+-------+-----------------+\n",
       "\n"
      ]
     },
@@ -614,21 +739,32 @@
    ],
    "source": [
     "# Keep only records where price is lower than its 95 percentile value to remove outliers\n",
-    "df_cleaned = df_cleaned.where((df_cleaned.price < price_95_percentiles))\n",
+    "df_cleaned = df_cleaned.where(df_cleaned.price < price_95_percentiles)\n",
     "# Check price summary after cleaning\n",
-    "df_cleaned.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"75%\", \"95%\", \"max\").show()"
+    "df_cleaned.select(\"price\").summary(\"count\", \"min\", \"5%\", \"25%\", \"50%\", \"mean\", \"75%\", \"95%\", \"max\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extracting insights\n",
+    "In this part we'll extract insights from the merged and cleaned data set\n",
+    "\n",
+    "### Which brand is the most popular?\n",
+    "To answer this question we'll group the data set by *brand*, count the number of occurrence for each *brand* and then sort by count."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 106:=================================================>   (104 + 7) / 111]\r"
+      "[Stage 31:====================================================> (107 + 4) / 111]\r"
      ]
     },
     {
@@ -675,6 +811,18 @@
     "# Group by brand, count records and sort by descending count\n",
     "df_cleaned.groupBy(\"brand\").count().sort(\"count\", ascending=False).show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this grouped data frame by *brand*, we can tell that **Samsung** is the most famous brand, since it's the branch most bought by the customers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
