--- a/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
+++ b/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
@@ -88,8 +88,8 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/13 17:24:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/08/13 17:24:23 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
+      "24/08/14 15:23:09 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/08/14 15:23:09 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/08/13 17:24:36 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n",
+      "24/08/14 15:23:21 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n",
       "[Stage 10:=================================================>    (102 + 9) / 111]\r"
      ]
     },
@@ -565,7 +565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 19:==================================================>   (103 + 8) / 111]\r"
+      "[Stage 19:=================================================>    (102 + 9) / 111]\r"
      ]
     },
     {
@@ -644,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can notice that a small portion of the prices (in the 95 percentile) have a very high value compared to the rest of the set. This skews the data set to the right.\n",
+    "We can notice that a small portion of the prices (in the 95 percentile) have a very high value compared to the rest of the set. This skews the quantitative variable to the right.\n",
     "\n",
     "The value above the 95 percentile can be considered as outliers.\n",
     "\n",
@@ -699,14 +699,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 36:>                                                         (0 + 1) / 1]\r"
+      "[Stage 30:>                                                         (0 + 1) / 1]\r"
      ]
     },
     {
@@ -764,7 +764,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 31:====================================================> (107 + 4) / 111]\r"
+      "[Stage 31:======================================================(111 + 0) / 111]\r"
      ]
     },
     {
@@ -816,7 +816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this grouped data frame by *brand*, we can tell that **Samsung** is the most famous brand, since it's the branch most bought by the customers."
+    "From this grouped data frame by *brand*, we can tell that **Samsung** is the most famous brand, since it's the brand most bought by the customers."
    ]
   },
   {
