--- a/finance-intervention-project/Clean_Business_Case_Data.ipynb
+++ b/finance-intervention-project/Clean_Business_Case_Data.ipynb
@@ -1603,7 +1603,9 @@
     "## Data Visualization\n",
     "Data visualization is done is 2 Tableau dashboards\n",
     "* [Intervention Project Occurrences](https://public.tableau.com/views/InterventionProjectOccurrences/InterventionFrequencyDashboard?:language=fr-FR&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link)\n",
-    "* [Intervention Success Scores](https://public.tableau.com/views/InterventionSuccessScores/InterventionSuccessScoresDashboard?:language=fr-FR&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link)"
+    "* [Intervention Success Scores](https://public.tableau.com/views/InterventionSuccessScores/InterventionSuccessScoresDashboard?:language=fr-FR&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link)\n",
+    "\n",
+    "Jupyter embedded view is rendered under [this link](https://nbviewer.org/github/Simonmaignan/data-analysis-projects/blob/main/finance-intervention-project/Clean_Business_Case_Data.ipynb)."
    ]
   },
   {
