Import error fixed

--- a/projects/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
+++ b/projects/kaggle-ecommerce-behavior/e_commerce_behavior.ipynb
@@ -18,21 +18,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/simonmaignan/workspace/data-analysis-projects/src\n"
+     ]
+    }
+   ],
    "source": [
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "# import os\n",
-    "# import sys\n",
-    "\n",
-    "# src_path = os.path.abspath(os.path.join(\"../src\"))\n",
-    "# sys.path.append(src_path)"
+    "# Handle relative import of modules\n",
+    "src_path = os.path.abspath(os.path.join(\"../../src\"))\n",
+    "if src_path not in sys.path:\n",
+    "    sys.path.append(src_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,17 +56,13 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
+    "from helpers import kaggle_helper\n",
     "\n",
-    "src_path = os.path.abspath(os.path.join(\"../../src/helpers\"))\n",
-    "sys.path.append(src_path)\n",
-    "\n",
-    "import kaggle_helper\n",
-    "\n",
+    "dataset_folder = \"dataset\"\n",
     "kaggle_helper.download_dataset_files(\n",
     "    dataset_author=\"mkechinov\",\n",
     "    dataset_name=\"ecommerce-behavior-data-from-multi-category-store\",\n",
+    "    dataset_folder=dataset_folder,\n",
     ")"
    ]
   },
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +85,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/18 16:32:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/19 17:22:38 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +135,13 @@
      "output_type": "stream",
      "text": [
       "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/08/19 17:22:50 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
      ]
     }
    ],
