Fifa 23 Best position value counts.

--- a/projects/fifa-23-players/fifa23-players-explore.ipynb
+++ b/projects/fifa-23-players/fifa23-players-explore.ipynb
@@ -5580,7 +5580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5589,7 +5589,7 @@
        "<Axes: xlabel='count', ylabel='Best Position'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5620,7 +5620,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CB', 'ST', 'CAM', 'GK', 'RM', 'CDM', 'CM', 'RB', 'LB', 'LM', 'RWB',\n",
+       "       'LWB', 'RW', 'LW', 'CF'],\n",
+       "      dtype='object', name='Best Position')"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fifa_players[\"Best Position\"].value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -5629,7 +5651,7 @@
        "<Axes: xlabel='count', ylabel='Best Position'>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
