--- a/projects/customer-courier/Customer_Courier_Chat_Messages.ipynb
+++ b/projects/customer-courier/Customer_Courier_Chat_Messages.ipynb
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from typing import Dict, List\n",
     "\n",
     "xlsx_file = pd.ExcelFile(\"dataset/technical-test-tables.xlsx\")"
    ]
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -376,73 +377,251 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>sender_app_type</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>from_id</th>\n",
+       "      <th>to_id</th>\n",
+       "      <th>chat_started_by_message</th>\n",
        "      <th>order_id</th>\n",
-       "      <th>first_message_time</th>\n",
-       "      <th>initiator_id</th>\n",
+       "      <th>order_stage</th>\n",
+       "      <th>courier_id</th>\n",
+       "      <th>message_sent_time</th>\n",
+       "      <th>city_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>38</td>\n",
-       "      <td>2022-08-09 07:55:10</td>\n",
-       "      <td>87</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Customer IOS</td>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>555</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-09 08:02:05</td>\n",
+       "      <td>BCN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>134</td>\n",
-       "      <td>2022-08-07 10:00:10</td>\n",
-       "      <td>23</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Courier IOS</td>\n",
+       "      <td>99</td>\n",
+       "      <td>21</td>\n",
+       "      <td>99</td>\n",
+       "      <td>False</td>\n",
+       "      <td>555</td>\n",
+       "      <td>ARRIVING</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-09 08:01:15</td>\n",
+       "      <td>BCN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>555</td>\n",
-       "      <td>2022-08-09 08:00:10</td>\n",
+       "      <td>Customer IOS</td>\n",
        "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>555</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-09 08:00:10</td>\n",
+       "      <td>BCN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>875</td>\n",
-       "      <td>2022-08-07 14:50:10</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Courier Android</td>\n",
+       "      <td>122</td>\n",
+       "      <td>87</td>\n",
+       "      <td>122</td>\n",
+       "      <td>True</td>\n",
+       "      <td>38</td>\n",
+       "      <td>ADDRESS_DELIVERY</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2022-08-09 07:55:10</td>\n",
+       "      <td>BCN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Customer Android</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
        "      <td>75</td>\n",
+       "      <td>False</td>\n",
+       "      <td>875</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2022-08-07 14:55:10</td>\n",
+       "      <td>VAL</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    order_id  first_message_time  initiator_id\n",
-       "3         38 2022-08-09 07:55:10            87\n",
-       "10       134 2022-08-07 10:00:10            23\n",
-       "2        555 2022-08-09 08:00:10            99\n",
-       "7        875 2022-08-07 14:50:10            75"
+       "    sender_app_type  customer_id  from_id  to_id  chat_started_by_message  \\\n",
+       "0      Customer IOS           99       99     21                    False   \n",
+       "1       Courier IOS           99       21     99                    False   \n",
+       "2      Customer IOS           99       99     21                    False   \n",
+       "3   Courier Android          122       87    122                     True   \n",
+       "4  Customer Android           43       43     75                    False   \n",
+       "\n",
+       "   order_id       order_stage  courier_id   message_sent_time city_code  \n",
+       "0       555        PICKING_UP          21 2022-08-09 08:02:05       BCN  \n",
+       "1       555          ARRIVING          21 2022-08-09 08:01:15       BCN  \n",
+       "2       555        PICKING_UP          21 2022-08-09 08:00:10       BCN  \n",
+       "3        38  ADDRESS_DELIVERY          87 2022-08-09 07:55:10       BCN  \n",
+       "4       875        PICKING_UP          75 2022-08-07 14:55:10       VAL  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "initial_message_df = messages_df.loc[\n",
-    "    messages_df.groupby(by=\"order_id\")[\"message_sent_time\"].idxmin()\n",
-    "]\n",
-    "initial_message_df = initial_message_df[\n",
-    "    [\"order_id\", \"message_sent_time\", \"from_id\"]\n",
-    "]\n",
-    "initial_message_df.rename(\n",
-    "    columns={\n",
-    "        \"message_sent_time\": \"first_message_time\",\n",
-    "        \"from_id\": \"initiator_id\",\n",
-    "    },\n",
-    "    inplace=True,\n",
-    ")\n",
-    "initial_message_df.head()"
+    "merged_df = messages_df.merge(right=orders_df, how=\"left\", on=\"order_id\")\n",
+    "merged_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sender_app_type</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>from_id</th>\n",
+       "      <th>to_id</th>\n",
+       "      <th>chat_started_by_message</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>order_stage</th>\n",
+       "      <th>courier_id</th>\n",
+       "      <th>message_sent_time</th>\n",
+       "      <th>city_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Courier Android</td>\n",
+       "      <td>122</td>\n",
+       "      <td>87</td>\n",
+       "      <td>122</td>\n",
+       "      <td>True</td>\n",
+       "      <td>38</td>\n",
+       "      <td>ADDRESS_DELIVERY</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2022-08-09 07:55:10</td>\n",
+       "      <td>BCN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Customer IOS</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>134</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-07 10:00:10</td>\n",
+       "      <td>OPO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Courier IOS</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>False</td>\n",
+       "      <td>134</td>\n",
+       "      <td>ARRIVING</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-07 10:01:15</td>\n",
+       "      <td>OPO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Customer IOS</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>134</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-07 10:02:05</td>\n",
+       "      <td>OPO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Customer IOS</td>\n",
+       "      <td>99</td>\n",
+       "      <td>99</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "      <td>555</td>\n",
+       "      <td>PICKING_UP</td>\n",
+       "      <td>21</td>\n",
+       "      <td>2022-08-09 08:00:10</td>\n",
+       "      <td>BCN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sender_app_type  customer_id  from_id  to_id  chat_started_by_message  \\\n",
+       "3   Courier Android          122       87    122                     True   \n",
+       "10     Customer IOS           23       23     21                    False   \n",
+       "9       Courier IOS           23       21     23                    False   \n",
+       "8      Customer IOS           23       23     21                    False   \n",
+       "2      Customer IOS           99       99     21                    False   \n",
+       "\n",
+       "    order_id       order_stage  courier_id   message_sent_time city_code  \n",
+       "3         38  ADDRESS_DELIVERY          87 2022-08-09 07:55:10       BCN  \n",
+       "10       134        PICKING_UP          21 2022-08-07 10:00:10       OPO  \n",
+       "9        134          ARRIVING          21 2022-08-07 10:01:15       OPO  \n",
+       "8        134        PICKING_UP          21 2022-08-07 10:02:05       OPO  \n",
+       "2        555        PICKING_UP          21 2022-08-09 08:00:10       BCN  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.sort_values(by=[\"order_id\", \"message_sent_time\"], inplace=True)\n",
+    "merged_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -467,32 +646,72 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>order_id</th>\n",
+       "      <th>city_code</th>\n",
+       "      <th>first_courier_message</th>\n",
+       "      <th>first_customer_message</th>\n",
+       "      <th>num_messages_courier</th>\n",
+       "      <th>num_messages_customer</th>\n",
+       "      <th>first_message_by</th>\n",
+       "      <th>conversation_started_at</th>\n",
+       "      <th>first_responsetime_delay_seconds</th>\n",
        "      <th>last_message_time</th>\n",
-       "      <th>last_order_stage</th>\n",
+       "      <th>last_message_order_stage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>0</th>\n",
        "      <td>38</td>\n",
+       "      <td>BCN</td>\n",
+       "      <td>2022-08-09 07:55:10</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>courier</td>\n",
+       "      <td>2022-08-09 07:55:10</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2022-08-09 07:55:10</td>\n",
        "      <td>ADDRESS_DELIVERY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>1</th>\n",
        "      <td>134</td>\n",
+       "      <td>OPO</td>\n",
+       "      <td>2022-08-07 10:01:15</td>\n",
+       "      <td>2022-08-07 10:00:10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>customer</td>\n",
+       "      <td>2022-08-07 10:00:10</td>\n",
+       "      <td>65.0</td>\n",
        "      <td>2022-08-07 10:02:05</td>\n",
        "      <td>PICKING_UP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>2</th>\n",
        "      <td>555</td>\n",
+       "      <td>BCN</td>\n",
+       "      <td>2022-08-09 08:01:15</td>\n",
+       "      <td>2022-08-09 08:00:10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>customer</td>\n",
+       "      <td>2022-08-09 08:00:10</td>\n",
+       "      <td>65.0</td>\n",
        "      <td>2022-08-09 08:02:05</td>\n",
        "      <td>PICKING_UP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>875</td>\n",
+       "      <td>VAL</td>\n",
+       "      <td>2022-08-07 14:50:10</td>\n",
+       "      <td>2022-08-07 14:51:10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>courier</td>\n",
+       "      <td>2022-08-07 14:50:10</td>\n",
+       "      <td>60.0</td>\n",
        "      <td>2022-08-07 14:55:10</td>\n",
        "      <td>PICKING_UP</td>\n",
        "    </tr>\n",
@@ -501,33 +720,80 @@
        "</div>"
       ],
       "text/plain": [
-       "   order_id   last_message_time  last_order_stage\n",
-       "3        38 2022-08-09 07:55:10  ADDRESS_DELIVERY\n",
-       "8       134 2022-08-07 10:02:05        PICKING_UP\n",
-       "0       555 2022-08-09 08:02:05        PICKING_UP\n",
-       "4       875 2022-08-07 14:55:10        PICKING_UP"
+       "   order_id city_code first_courier_message first_customer_message  \\\n",
+       "0        38       BCN   2022-08-09 07:55:10                    NaT   \n",
+       "1       134       OPO   2022-08-07 10:01:15    2022-08-07 10:00:10   \n",
+       "2       555       BCN   2022-08-09 08:01:15    2022-08-09 08:00:10   \n",
+       "3       875       VAL   2022-08-07 14:50:10    2022-08-07 14:51:10   \n",
+       "\n",
+       "   num_messages_courier  num_messages_customer first_message_by  \\\n",
+       "0                     1                      0          courier   \n",
+       "1                     1                      2         customer   \n",
+       "2                     1                      2         customer   \n",
+       "3                     2                      2          courier   \n",
+       "\n",
+       "  conversation_started_at  first_responsetime_delay_seconds  \\\n",
+       "0     2022-08-09 07:55:10                               NaN   \n",
+       "1     2022-08-07 10:00:10                              65.0   \n",
+       "2     2022-08-09 08:00:10                              65.0   \n",
+       "3     2022-08-07 14:50:10                              60.0   \n",
+       "\n",
+       "    last_message_time last_message_order_stage  \n",
+       "0 2022-08-09 07:55:10         ADDRESS_DELIVERY  \n",
+       "1 2022-08-07 10:02:05               PICKING_UP  \n",
+       "2 2022-08-09 08:02:05               PICKING_UP  \n",
+       "3 2022-08-07 14:55:10               PICKING_UP  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "last_message_df = messages_df.loc[\n",
-    "    messages_df.groupby(by=\"order_id\")[\"message_sent_time\"].idxmax()\n",
-    "]\n",
-    "last_message_df = last_message_df[\n",
-    "    [\"order_id\", \"message_sent_time\", \"order_stage\"]\n",
-    "]\n",
-    "last_message_df.rename(\n",
-    "    columns={\n",
-    "        \"message_sent_time\": \"last_message_time\",\n",
-    "        \"order_stage\": \"last_order_stage\",\n",
-    "    },\n",
-    "    inplace=True,\n",
-    ")\n",
-    "last_message_df.head()"
+    "from pprint import pprint\n",
+    "\n",
+    "conversations_data: List[Dict] = []\n",
+    "for order_id, group in merged_df.groupby(\"order_id\"):\n",
+    "    conversation_data: Dict[str, int | str] = {}\n",
+    "    conversation_data[\"order_id\"] = order_id\n",
+    "    conversation_data[\"city_code\"] = group[\"city_code\"].iloc[0]\n",
+    "    conversation_data[\"first_courier_message\"] = group.loc[\n",
+    "        group[\"courier_id\"] == group[\"from_id\"], \"message_sent_time\"\n",
+    "    ].min()\n",
+    "    conversation_data[\"first_customer_message\"] = group.loc[\n",
+    "        group[\"customer_id\"] == group[\"from_id\"], \"message_sent_time\"\n",
+    "    ].min()\n",
+    "    conversation_data[\"num_messages_courier\"] = group.loc[\n",
+    "        group[\"courier_id\"] == group[\"from_id\"], \"order_stage\"\n",
+    "    ].count()\n",
+    "    conversation_data[\"num_messages_customer\"] = group.loc[\n",
+    "        group[\"customer_id\"] == group[\"from_id\"], \"order_stage\"\n",
+    "    ].count()\n",
+    "    conversation_data[\"first_message_by\"] = (\n",
+    "        \"customer\"\n",
+    "        if group[\"from_id\"].iloc[0] == group[\"customer_id\"].iloc[0]\n",
+    "        else \"courier\"\n",
+    "    )\n",
+    "    conversation_data[\"conversation_started_at\"] = group[\n",
+    "        \"message_sent_time\"\n",
+    "    ].iloc[0]\n",
+    "    conversation_data[\"first_responsetime_delay_seconds\"] = None\n",
+    "    if len(group) > 1:\n",
+    "        conversation_data[\"first_responsetime_delay_seconds\"] = (\n",
+    "            group[\"message_sent_time\"].iloc[1]\n",
+    "            - group[\"message_sent_time\"].iloc[0]\n",
+    "        ).total_seconds()\n",
+    "    conversation_data[\"last_message_time\"] = group[\"message_sent_time\"].iloc[\n",
+    "        -1\n",
+    "    ]\n",
+    "    conversation_data[\"last_message_order_stage\"] = group[\"order_stage\"].iloc[\n",
+    "        -1\n",
+    "    ]\n",
+    "    conversations_data.append(conversation_data)\n",
+    "    # pprint(conversation_data)\n",
+    "customer_courier_conversations = pd.DataFrame(conversations_data)\n",
+    "customer_courier_conversations.head()"
    ]
   }
  ],
