Candy store explore improved markdown and comments

--- a/projects/candy-store/candy-store-explore.ipynb
+++ b/projects/candy-store/candy-store-explore.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +42,13 @@
       "Listing local csv files in ./dataset.\n",
       "File retail_sales_dataset.csv with size 51673 found in ./dataset\n",
       "File candy-data.csv with size 5205 found in ./dataset\n",
+      "File candy-type-data.csv with size 445 found in ./dataset\n",
       "Listing files associated with Kaggle dataset mohammadtalib786/retail-sales-dataset.\n",
       "File retail_sales_dataset.csv with size 51673 retrieved from Kaggle API.\n",
       "Listing local csv files in ./dataset.\n",
       "File retail_sales_dataset.csv with size 51673 found in ./dataset\n",
       "File candy-data.csv with size 5205 found in ./dataset\n",
+      "File candy-type-data.csv with size 445 found in ./dataset\n",
       "Listing files associated with Kaggle dataset fivethirtyeight/the-ultimate-halloween-candy-power-ranking.\n",
       "File candy-data.csv with size 5205 retrieved from Kaggle API.\n"
      ]
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -232,15 +234,13 @@
        "4   52.341465  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "\n",
     "df_candies = pd.read_csv(f\"{dataset_folder}/candy-data.csv\")\n",
     "print(\n",
@@ -251,7 +251,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 85 entries, 0 to 84\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   competitorname    85 non-null     object \n",
+      " 1   chocolate         85 non-null     int64  \n",
+      " 2   fruity            85 non-null     int64  \n",
+      " 3   caramel           85 non-null     int64  \n",
+      " 4   peanutyalmondy    85 non-null     int64  \n",
+      " 5   nougat            85 non-null     int64  \n",
+      " 6   crispedricewafer  85 non-null     int64  \n",
+      " 7   hard              85 non-null     int64  \n",
+      " 8   bar               85 non-null     int64  \n",
+      " 9   pluribus          85 non-null     int64  \n",
+      " 10  sugarpercent      85 non-null     float64\n",
+      " 11  pricepercent      85 non-null     float64\n",
+      " 12  winpercent        85 non-null     float64\n",
+      "dtypes: float64(3), int64(9), object(1)\n",
+      "memory usage: 8.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_candies.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +410,7 @@
        "4         2              50           100  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,11 +425,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   Transaction ID    1000 non-null   int64 \n",
+      " 1   Date              1000 non-null   object\n",
+      " 2   Customer ID       1000 non-null   object\n",
+      " 3   Gender            1000 non-null   object\n",
+      " 4   Age               1000 non-null   int64 \n",
+      " 5   Product Category  1000 non-null   object\n",
+      " 6   Quantity          1000 non-null   int64 \n",
+      " 7   Price per Unit    1000 non-null   int64 \n",
+      " 8   Total Amount      1000 non-null   int64 \n",
+      "dtypes: int64(5), object(4)\n",
+      "memory usage: 70.4+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "candy_types = [\n",
+    "df_retail_sales.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data transformation\n",
+    "In order to simplify the visualization of the price and rating of each candy category in Tableau, I create a new data frame containing the average price and rating for each category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>avgpricepercent</th>\n",
+       "      <th>avgwinpercet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chocolate</td>\n",
+       "      <td>0.632162</td>\n",
+       "      <td>0.609215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fruity</td>\n",
+       "      <td>0.332737</td>\n",
+       "      <td>0.441197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Caramel</td>\n",
+       "      <td>0.631571</td>\n",
+       "      <td>0.573469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Peanutyalmondy</td>\n",
+       "      <td>0.666643</td>\n",
+       "      <td>0.636971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nougat</td>\n",
+       "      <td>0.614143</td>\n",
+       "      <td>0.600519</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Category  avgpricepercent  avgwinpercet\n",
+       "0       Chocolate         0.632162      0.609215\n",
+       "1          Fruity         0.332737      0.441197\n",
+       "2         Caramel         0.631571      0.573469\n",
+       "3  Peanutyalmondy         0.666643      0.636971\n",
+       "4          Nougat         0.614143      0.600519"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List of candy types\n",
+    "candy_types: List[str] = [\n",
     "    \"chocolate\",\n",
     "    \"fruity\",\n",
     "    \"caramel\",\n",
@@ -404,21 +556,66 @@
     "    \"bar\",\n",
     "    \"pluribus\",\n",
     "]\n",
-    "measures_of_interest = [\"pricepercent\", \"winpercent\"]\n",
-    "values = []\n",
+    "measures_of_interest: List[str] = [\"pricepercent\", \"winpercent\"]\n",
+    "values: List[str | int] = []\n",
     "for candy_type in candy_types:\n",
     "    df_temp = df_candies.groupby(candy_type)[measures_of_interest].mean()\n",
+    "    # Retrieve price and win for the second line which corresponds to the category being true\n",
     "    type_price, type_win = df_temp.iloc[1]\n",
+    "    # The type_win (rating) is transformed from 0-100% to 0-1.0\n",
     "    values.append((candy_type.capitalize(), type_price, type_win / 100))\n",
     "df_categories = pd.DataFrame(\n",
     "    values, columns=[\"Category\", \"avgpricepercent\", \"avgwinpercet\"]\n",
     ")\n",
+    "df_categories.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write new category data frame to csv file\n",
     "df_categories.to_csv(\"dataset/candy-type-data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Data Visualization\n",
+    "The data visualization is done in Tableau. Here is the [link](https://public.tableau.com/views/candy-store/CandyStore?:language=es-ES&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link) to the dashboard."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class='tableauPlaceholder' id='viz1726403430709' style='position: relative'><noscript><a href='#'><img alt='Candy Store ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ca&#47;candy-store&#47;CandyStore&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='candy-store&#47;CandyStore' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ca&#47;candy-store&#47;CandyStore&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1726403430709');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='3840px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='2187px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='3840px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='2187px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<div class='tableauPlaceholder' id='viz1726403430709' style='position: relative'><noscript><a href='#'><img alt='Candy Store ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ca&#47;candy-store&#47;CandyStore&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='candy-store&#47;CandyStore' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ca&#47;candy-store&#47;CandyStore&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='es-ES' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1726403430709');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='3840px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='2187px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='420px';vizElement.style.maxWidth='3840px';vizElement.style.width='100%';vizElement.style.minHeight='587px';vizElement.style.maxHeight='2187px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='1827px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
